--- a/style.css
+++ b/style.css
@@ -45,16 +45,13 @@ nav li:hover a {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
     color: white;
     font-weight: bolder;
     font-size: 2.5rem;
-
     display: flex;
     justify-content: flex-end;
     align-items: center;
     text-align: right;
-
     height: 60vh;
     padding: 40px;
 }
@@ -106,7 +103,7 @@ nav li:hover a {
 }
 
 .card {
-    padding: 5px 20px;
+    padding: 5px 10px;
     width: 25%;
     text-align: center;
     display: flex;
@@ -163,6 +160,178 @@ footer {
     width: 20%;
 }
 
+.footer-info iframe {
+    max-width: 100%;
+    height: auto;
+}
+
 .footer-info a{
     color: white;
+}
+
+#statistics-title {
+    background-image: linear-gradient(90deg, #E65100, #C2185B, #0D47A1);
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+#statistics-title h1{
+    
+    color: white;
+    padding: 10px 20px;
+    display: inline-block;
+    width: 60%;
+    
+}
+
+.place-cards img {
+    width: 200px;
+}
+
+#podium-places {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+.place-cards {
+    border: 1px solid rgb(191, 191, 191);
+    border-radius: 10px;
+    padding: 20px;
+    width: 250px;
+    text-align: center;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#second-place {
+    margin-top: 50px;
+}
+
+#third-place {
+    margin-top: 50px;
+}
+
+#position-title {
+    text-align: center;
+}
+
+#statistics-table {
+    width: 100%;
+    overflow-x: auto;
+}
+
+#teams-statistics tr:nth-child(even){
+    background-color: rgba(0, 0, 0, .05);
+}
+
+#teams-statistics th:first-child, td:first-child {
+    border-right: 1px solid rgb(197, 197, 197);
+}
+
+#teams-statistics {
+    min-width: 800px;
+    border-collapse: collapse;
+    text-align: left;
+    margin: 30px;
+}
+
+#teams-statistics th {
+    border-bottom: 1px solid rgb(197, 197, 197);
+}
+
+#teams-statistics th, td {
+    padding: 20px;
+    text-align: left;
+}
+
+@media (max-width:768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px 0px 0px;
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    .nav-bar {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #hero-image {
+        text-align: center;
+        justify-content: center;
+    }
+
+    #tournament-main-info {
+        align-items: center;
+        justify-content: center;
+    }
+
+    #color-cards {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .card {
+        width: 70%;
+        height: 300px;
+    }
+
+    footer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .footer-info {
+        width: 70%;
+    }
+
+    #statistics-title {
+        justify-content: center;
+        text-align: center;
+    }
+
+    #podium-places {
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .place-cards, #second-place, #third-place {
+        margin: 10px;
+    }
+
+    #first-place {
+        order: 1;
+    }
+
+    #second-place {
+        order: 2;
+    }
+
+    #third-place {
+        order: 3;
+    }
+
+    #statistics-table {
+        overflow-x: auto;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
 }
