--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ footer {
     min-width: 800px;
     border-collapse: collapse;
     text-align: left;
-    margin: 30px;
+    margin: 30px auto;
 }
 
 #teams-statistics th {
